fix: letter spacing of the titles

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -9,9 +9,13 @@
     align-items: center;
     flex-direction: column;
     
+    
+    
 }
 
 .hero-title-wrapper{
+    
+    margin-top: 80px;
     width: 80%;
     height: 50%;
     display: flex;
@@ -25,6 +29,8 @@
     margin: 0;
     letter-spacing: 0;
     padding: 0;
+    word-spacing: -2px;
+    letter-spacing: -5px;
 }
 .hero-subtitle{
     width: 60%;
